--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Garage Template - Contact Page</title>
+	<title>1969 cars by wic</title>
 	<meta name="description" content="">
 <!--
 
