--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@ http://www.tooplate.com/view/2079-garage
 		&copy; Copy right 2016 | <a href="#">Privacy </a>| <a href="#">Policy</a>
 	</div>
 	<div class="atisda">
-		 Designed by <a href="http://www.webdomus.net/">Web Domus Italia - Web Agency </a> 
+		 Designed by <a href="https://www.pcas.edu.in/">VIGNESHWARAN / WICK </a> 
 	</div>
 </div>
 
