--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ http://www.tooplate.com/view/2079-garage
 			 				<button id="btnRM" onClick="rmtxt()">READ MORE</button>
 			 				<div id="readmore">
 			 						<h1>Car Name</h1>
-			 						<p>"read more kuduthu pakkura alavuku idhukulla onum illa , enna paakura naa onum periya developer elam illa projectr kaga creat pannathu tha idhula onum illa muuditu kelambu
+			 						<p>"read more kuduthu pakkura alavuku idhukulla onum illa , enna paakura naa onum periya developer elam illa project kaga create pannathu tha idhula onum illa muuditu kelambu
 <br>
 			 						</p>
 			 						<button id="btnRL">READ LESS</button>
@@ -207,7 +207,7 @@ http://www.tooplate.com/view/2079-garage
 			 				<button id="btnRM2">READ MORE</button>
 			 				<div id="readmore2">
 			 						<h1>Car Name</h1>
-			 						<p>"read more kuduthu pakkura alavuku idhukulla onum illa , enna paakura naa onum periya developer elam illa projectr kaga creat pannathu tha idhula onum illa muuditu kelambu
+			 						<p>"read more kuduthu pakkura alavuku idhukulla onum illa , enna paakura naa onum periya developer elam illa project kaga create pannathu tha idhula onum illa muuditu kelambu
 <br></p>
 			 						<button id="btnRL2">READ LESS</button>
 			 				</div>
