--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@ http://www.tooplate.com/view/2079-garage
 				<li><a href="#"><i class="fa fa-pinterest"></i></a></li>
 			</ul>
 			<ul class="givusacall">
-				<li>Give us a call : +66666666 </li>
+				<li>Give us a call : 7806877456 </li>
 			</ul>
 			<ul class="logreg">
 				<li><a href="#">Login </a> </li>
